trc khi lam res API

--- a/src/view/admin/admin.ejs
+++ b/src/view/admin/admin.ejs
@@ -177,7 +177,7 @@
                         <%= item.category.name %>
                     </h5>
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                            data-bs-target="#staticBackdrop">
+                            data-bs-target="#staticBackdrop<%= item.id %>">
                         DELETE
                     </button>
 
@@ -187,7 +187,7 @@
                 </div>
             </div>
         </div>
-        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
+        <div class="modal fade" id="staticBackdrop<%= item.id %>" data-bs-backdrop="static" data-bs-keyboard="false"
              tabindex="-1"
              aria-labelledby="staticBackdropLabel" aria-hidden="true">
             <div class="modal-dialog">
